--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 openai==1.68.2
-google-generativeai==0.5.0
+google-generativeai>=0.8.5
 PyGithub==2.3.0
 httpx==0.28.1
 atlassian-python-api>=3.19
 python-gitlab==5.6.0
+google-ai-generativelanguage>=0.6.15
